--- a/flaskapp/templates/test-dashboard-postformat.html
+++ b/flaskapp/templates/test-dashboard-postformat.html
@@ -83,7 +83,7 @@ Visitor Data
 
                         <!--Visitor Compnay -->
                         <div class="form-row form-group mb-2">
-                            <label class="sr-only" for="visitorcompnay">Compnay From: </label>
+                            <label class="sr-only" for="visitorcompnay">Company From: </label>
                             <input style="text-transform:uppercase;" name="visitorcompany" class="form-control"
                                 type="text" placeholder="Visitor Company" required>
                         </div>
@@ -100,7 +100,7 @@ Visitor Data
 
                         <!--Compnay From Input-->
                         <div class="form-group mb-2">
-                            <label class="sr-only" for="visitingpurpose">Compnay From: </label>
+                            <label class="sr-only" for="visitingpurpose">Company From: </label>
                             <input style="text-transform:uppercase;" name="visitingpurpose" class="form-control"
                                 type="text" placeholder="Visiting Purpose">
                         </div>
