--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -78,7 +78,7 @@
 
 <body>
 
-    <nav style="height: 60px;" class="text-dark navbar navbar-dark bg-light flex-md-nowrap border-bottom ">
+    <nav style="height: 60px;" class="fixed-top text-dark navbar navbar-dark bg-light flex-md-nowrap border-bottom ">
         <p style="font-weight: 400;" class=" lead h5">Visitor Management System</p>
         <form id="navbarSearchForm" class="navbar-form form-row  justify-content-center" role="search" action="{{url_for('search.search_main')}}">
             <div class="col-md-5 col-sm-4">
@@ -108,7 +108,7 @@
     <div class="container-fulid">
         <div class="row">
             <!-- Side Bar Starting -->
-            <nav style="margin-top: 59px;" id="sidenav-main" class=" collapse col-md-2 d-none d-md-block bg-light sidebar border-top ">
+            <nav style="margin-top: 59px;" id="sidenav-main" class="collapse col-md-2 d-none d-md-block bg-light sidebar border-top ">
                 <div style="background-color: #f5f7fa" class="sidebar-sticky">
                         <h3 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-1 mb-1 text-muted">
                                 <span style="font-size: 1.25rem;"> Manage</span>
@@ -121,12 +121,6 @@
                                     <a class="nav-link" href="{{url_for('admin.admin_main')}}">
                                         <span style="font-size: 1rem;" data-feather="file-text">Admin </span>
         
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{{url_for('report.dashboard')}}">
-                                        <span style="font-size: 1rem;" data-feather="file-text">Dashboard</span>
-                                        
                                     </a>
                                 </li>
                             </ul>
@@ -172,24 +166,56 @@
                             </a>
                         </li>
                     </ul>
+                    <h3 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                            <span style="font-size: 1.25rem;"> DashBoard </span>
+                            <a class="d-flex align-items-center text-muted" href="#">
+                        
+                            </a>
+                        </h3>
+                        <ul id="mainsidebar-report" class="nav flex-column mb-2 border-bottom">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{url_for('report.dashboard')}}">
+                                    <span style="font-size: 1rem;" data-feather="file-text">Visitors</span>
+    
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{url_for('report.dashboard_vehicle')}}">
+                                    <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
+                                    
+                                </a>
+                            </li>
+                        </ul>
                     </div>
             </nav>
             <!-- End OF Side Bar-->
             <!-- Start of Main -->
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+    <main style="margin-top: 59px;" role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
                     {% with messages = get_flashed_messages() %}
                     {% if messages %}
                         {% for message in messages %}  
-                            <div class="alert text-center lead alert-primary">{{message}}</div>
+                                  <!-- Then put toasts within -->
+                                  <div class="toast text-monospace bg-info   " role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000" style="z-index:1; position:absolute; top:1rem; right: 1rem;">
+                                    <div class="toast-header">
+                                      <strong class="mr-auto">Alert</strong>
+                                      <small class="text-muted">just now</small>
+                                      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                      </button>
+                                    </div>
+                                    <div class="toast-body">
+                                      {{message}}
+                                    </div>
+                                  </div>
                         {% endfor %}
                     {% endif %}
                 {% endwith %}
                 <div style="margin: 2px; border-bottom: black;" class="">
-                    <h1  class="h2 mb-4 text-center">{% block title %}Main Page{% endblock %}-{% block linktitle%} {% endblock %}</h1>
+                    <h1  class="h2 mb-4 text-center">{% block title %}Main Page{% endblock %}{% block linktitle%} {% endblock %}</h1>
                 {% block body %} 
                 
                 {% endblock %}
-            </main>
+    </main>
             <!-- End of Main -->
         </div>
     </div>
@@ -213,6 +239,10 @@
    
     
     <!-- Icons -->
+    <script>
+       $('.toast').toast('show');
+    </script>
+
     <script>
        $(document).ready(function () {
     $('button').click(function() {
