--- a/flaskapp/templates/report-visitors-print.html
+++ b/flaskapp/templates/report-visitors-print.html
@@ -16,15 +16,15 @@
         </style>
     </head>
     <body>
-        <div class="container-fulid">   
+        <div class="container-fulid border border-dark p-1">   
                 <div class="printclass">
                         <div class="text-center">
-                            <h5>Siddhi Vinayak Knots and Prints Pvt. Ltd.</h5>
+                            <h5 class="mb-0">Siddhi Vinayak Knots and Prints Pvt. Ltd.</h5>
                             <p class=" mb-0 text-monospace text-muted">A-26 To A-32, "Central Park", G.I.D.C Pandesra, SURAT-394221.
                                 </p>
-                                <h5 class="mb-0 mt-0">{{title}}</h5>
+                                <h5 class="mb-0 mt-2">{{title}}</h5>
                         </div>
-                        <p class="  text-left"><strong> Date: {{date.strftime('%d-%m-%Y')}}</strong> <span class=" ml-4 text-left"><strong >Total Count:<span class="ml-2">{{count}}</span></strong></span> </p> 
+                        <p class="mr-2 text-right"><strong> Date: {{date.strftime('%d/%m/%Y')}}</strong> <span class=" ml-4 text-left"><strong >Total Count:<span class="ml-2">{{count}}</span></strong></span> </p> 
                         <div id='tableclass' class="">
                             <table class="table table-sm table-bordered">
                                 <thead >
@@ -46,12 +46,12 @@
                                     {% for vi in query %}
                                      <tr>
                                             <td></td>
-                                            <td>{{vi.visitor_name}}</td>
+                                            <td>{{vi.visitor_name.title()}}</td>
                                             <td>{{vi.visitor_contact}}</td>
-                                            <td>{{vi.visitor_company}}</td>
-                                            <td> {{vi.visited_employee.employee_name}} </td>
-                                            <td>{{vi.visited_dept.department_name}}</td>
-                                            <td> {{vi.visiting_purpose}}</td>
+                                            <td>{{vi.visitor_company.title()}}</td>
+                                            <td> {{vi.visited_employee.employee_name.title()}} </td>
+                                            <td>{{vi.visited_dept.department_name.title()}}</td>
+                                            <td> {{vi.visiting_purpose.title()}}</td>
                                             <td>{{vi.entry_time}}</td>
                                             <td>{{vi.exit_time}}</td>
                                             <td>{{vi.total_duration}}</td>
