--- a/flaskapp/templates/test-dashboard-front.html
+++ b/flaskapp/templates/test-dashboard-front.html
@@ -9,7 +9,7 @@ Summary Dashboard
 {% block body %}
 
 <div class="container-fulid">
-    <div id="visitor_card">
+    <div id="visitor_card" class="row">
         <div class="col">
             <div class="card">
                 <h5 class="card-header"> Visitors Summary</h5>
@@ -36,6 +36,11 @@ Summary Dashboard
             </div>
         </div> 
     </div>
+    <div class="row">
+        <div class="col">
+            
+        </div>
+    </div>
 
 </div>
 
@@ -46,7 +51,7 @@ Summary Dashboard
 <script type="text/javascript">
 var ctx = document.getElementById('linechartforvisitors').getContext('2d');
 var myChart = new Chart(ctx, {
-    type: 'line',
+    type: 'bar',
     data: {
         labels:[
         {% for i in total_count %}
