--- a/flaskapp/templates/signin.html
+++ b/flaskapp/templates/signin.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="google-site-verification" content="us0SsMQZv_MwpHeqRzegn7LVmikRfzAxewNCHxBMaCE" />
 
   <title>Login</title>
 
