--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -234,8 +234,8 @@
     <script src="{{url_for('static', filename='js/js.cookie.js')}}"></script>
     <script src="{{url_for('static', filename='js/js.cookie.min.js')}}"></script>
     <script src="{{url_for('static',filename='js/buttons.print.min.js')}}"></script>
-    <script src="{{url_for('static',filename='js/chart.js')}}"></script>
-    <script src="{{url_for('static',filename='js/chart.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/Chart.js')}}"></script>
+    <script src="{{url_for('static',filename='js/Chart.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/updateajax.js')}}"> </script>
    
     
