--- a/flaskapp/templates/test-dashboard-vehicles.html
+++ b/flaskapp/templates/test-dashboard-vehicles.html
@@ -178,7 +178,7 @@ Data Entry
                                                                 <td>{{v.OutTime}}</td>
                                                                 <form action="/vehicles/mill/update" method="POST">
                                                                     <input type="hidden" value="{{v.id}}" name="vid">
-                                                                    <td><input value="{{v.InTime}}" class="form-control col-5" type="time"
+                                                                    <td><input value="{{v.InTime}}" class="form-control col-7 form-control-sm" type="time"
                                                                             name="intime"></td>
                                                                     <td><input type="submit" class="btn btn-sm  btn-warning" value="UPDATE"
                                                                             </td> 
