Updated dataentry for mill and outside vehicles

--- a/flaskapp/templates/test-dashboard-postformat.html
+++ b/flaskapp/templates/test-dashboard-postformat.html
@@ -22,18 +22,20 @@
 
 <!--Page Title Block-->
 {% block pagetitle %}
-Data Entry
+Visitor Data Entry
 {% endblock %}
 <!-- End of Page Title BLock-->
 
 
 <!--Title Block-->
 {% block title %}
-Data Entry
+Visitor Data Entry
 {% endblock %}
 <!--End of Title Block-->
+
+
 {% block linktitle %}
-Visitor Data
+
 {% endblock %}
 
 {% block body %}
