--- a/flaskapp/templates/test-dashboard-front.html
+++ b/flaskapp/templates/test-dashboard-front.html
@@ -1,7 +1,7 @@
 {% extends 'test-dashboard.html' %}
 
 {% block pagetitle %}
-Summary Dashboard
+Visitor Dashboard
 {% endblock %}
 
 {% block title %} Summary DashBoard {% endblock %}
