--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -144,6 +144,8 @@
                                         <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
                                         
                                     </a>
+                                    <ul><li class="nav-item"><a class="nav-link" href="{{url_for('dataentry.post_vehicles')}}">Outside Vehicles</a> </li>
+                                        <li class="nav-item"><a class="nav-link" href="{{url_for('dataentry.post_mill')}}">Mill Vehicles </a> </li></ul>
                                 </li>
                             </ul>
 
@@ -165,6 +167,7 @@
                                 <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
                                 
                             </a>
+    
                         </li>
                     </ul>
                     <h3 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
