--- a/flaskapp/templates/test-dashbaord-report_visitor.html
+++ b/flaskapp/templates/test-dashbaord-report_visitor.html
@@ -13,141 +13,113 @@
 {% block linktitle %} Visitors {% endblock %}
 
 {% block body %}
-<div class="accordian" id="visitorpanel">
-    <div class=" justify-content-center mt-4 mr-auto ml-auto mb-4 row">
-        <div class="btn-toolbar"  role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-2 btn-group-lg" role="group" aria-label="First group">
-              <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#daily-visitors-link"> Daily Visitors</button>
-              <button type="button" class="btn btn-warning"  data-toggle="collapse" data-target="#allvisitor">All Visitors</button>
+<div class="row">
+    <div class="col-2">
+            <div class="card">
+                    <h5 class="card-header text-center">Print</h5>
+                        <div class="btn-group-vertical p-2">
+                            <button type="button" data-toggle="modal" data-target="#datewisemodal"  class="btn btn-secondary mb-2"> Date Wise Report</button>
+                            <button href="#" class="btn btn-secondary "> Department Wise Report</button>
+                        </div>
+                    </div>
+    </div>
+    <div class="modal fade" id="datewisemodal" tabindex="-1" role="dialog" aria-labelledby="datewisemodallabel" aria-hidden="true">
+            <div class="modal-dialog" role="form">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title"> Date Wise Report </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body">
+                            <form class="form-row" action="{{url_for('report.report_print')}}" method="POST">
+                            <input type="hidden" name="printid" value="1">
+                            <label class=" mb-2 h6 col-form-label" for="#date">Select Date : </label>
+                            <input id="date" type="date" class="form-control" name="date" autofocus>
+                            <input type="submit"  class="mt-2 btn btn-primary btn-block btn-sm" value="Print">
+                              
+                        </form>
+                        
+                    </div>
+                </div>
             </div>
         </div>
+    <div class="col">
+            <div id="allvisitor"  class="card" >
+                    <div class="card-header text-center">
+                        <h5 class="text-black">Siddhi Vinayak Knots & Prints Pvt. Ltd.</h5>
+                        <p class="text-muted">A-26 To A-32, "Central Park", G.I.D.C Pandesra, SURAT-394221.
+                        </p>
+                        <h6 class="text-black">ALL VISITOR SLIP</h6>
+                    </div>
+            
+                    <div class="card-body">
+                        <table  id='all-visitoreport' 
+                        class=" table table-sm table-bordered table-striped ">
+                            <thead class="thead-light">
+                                <tr class="">
+                                    
+                                    <th>Entry date</th>
+                                    <th>Visitor Name</th>
+                                    <th>Contact Number</th>
+                                    <th>Visitor Company</th>
+                                    <th>Visiting Person</th>
+                                    <th>Visiting Department</th>
+                                    <th>Visiting Purpose</th>
+                                    <th>In Time</th>
+                                    <th>Out Time</th>
+                                    <th>Total Duration</th>
+            
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for vi in visitors %}
+                                <tr>
+                                    
+                                    <td>{{vi.entry_date.strftime('%d-%m-%Y')}}</td>
+                                    <td>{{vi.visitor_name}}</td>
+                                    <td>{{vi.visitor_contact}}</td>
+                                    <td>{{vi.visitor_company}}</td>
+                                    <td> {{vi.visited_employee.employee_name}} </td>
+                                    <td>{{vi.visited_dept.department_name}}</td>
+                                    <td> {{vi.visiting_purpose}}</td>
+                                    <td>{{vi.entry_time}}</td>
+                                    <td>{{vi.exit_time}}</td>
+                                    <td>{{vi.total_duration}}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    
+                                    <th>Entry date</th>
+                                    <th>Visitor Name</th>
+                                    <th>Contact Number</th>
+                                    <th>Visitor Company</th>
+                                    <th>Visiting Department</th>
+                                    <th>Visiting Person</th>
+                                    <th>Visiting Purpose</th>
+                                    <th>In Time</th>
+                                    <th>Out Time</th>
+                                    <th>Total Duration</th>
+                                </tr>
+                            </tfoot>
+                        </table>
+            
+                    </div>
+                </div>
     </div>
-
-    <!--Daily Visitors-------------------------------------------------------------------------------->
-    <div id="daily-visitors-link" class="collapse" data-parent="#visitorpanel">
-        <div id="daily-visitor-card" class="card">
-            <div class="card-header text-center">
-                <h5 class="text-black">Siddhi Vinayak Knots & Prints Pvt. Ltd.</h5>
-                <p class="text-muted">A-26 To A-32, "Central Park", G.I.D.C Pandesra, SURAT-394221.
-                </p>
-                <h6 class="text-black"> Daily VISITOR SLIP</h6>
-                <form class="form-row" action="{{url_for('report.report_print')}}" method="POST">
-                        <input type="hidden" name="printid" value="1">
-                        <input type="date" class="form-control col-2" name="date">
-                        <input type="submit" class="btn btn-primary ml-3" value="PRINT">
-                    </form>
-            </div>
-           
-            <div class="card-body">
-                <table padding: .25rem;" data-paging="true" id='daily-visitors'
-                    class="table table-bordered table-sm">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Entry date</th>
-                            <th>Visitor Name</th>
-                            <th>Contact Number</th>
-                            <th>Visitor Company</th>
-                            <th>Visiting Person</th>
-                            <th>Visiting Department</th>
-                            <th>Visiting Purpose</th>
-                            <th>In Time</th>
-                            <th>Out Time</th>
-                            <th>Total Duration</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for vi in query_visitors_date %}
-                        <tr>
-                            <td>{{vi.id}}</td>
-                            <td>{{vi.entry_date.strftime('%d-%m-%Y')}}</td>
-                            <td>{{vi.visitor_name}}</td>
-                            <td>{{vi.visitor_contact}}</td>
-                            <td>{{vi.visitor_company}}</td>
-                            <td> {{vi.visited_employee.employee_name}} </td>
-                            <td>{{vi.visited_dept.department_name}}</td>
-                            <td> {{vi.visiting_purpose}}</td>
-                            <td>{{vi.entry_time}}</td>
-                            <td>{{vi.exit_time}}</td>
-                            <td>{{vi.total_duration}}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                    
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <!--All Visitor Report----------------------------------------------------------------------------->
-
-    <div id="allvisitor" style="margin-top: 15px;" class="collapse card" data-parent="#visitorpanel">
-        <div class="card-header text-center">
-            <h5 class="text-black">Siddhi Vinayak Knots & Prints Pvt. Ltd.</h5>
-            <p class="text-muted">A-26 To A-32, "Central Park", G.I.D.C Pandesra, SURAT-394221.
-            </p>
-            <h6 class="text-black">ALL VISITOR SLIP</h6>
-        </div>
-
-        <div class="card-body">
-            <table data-paging="true" id='all-visitoreport' 
-                class="table table-bordered display compact">
-                <thead>
-                    <tr>
-                        
-                        <th>Entry date</th>
-                        <th>Visitor Name</th>
-                        <th>Contact Number</th>
-                        <th>Visitor Company</th>
-                        <th>Visiting Person</th>
-                        <th>Visiting Department</th>
-                        <th>Visiting Purpose</th>
-                        <th>In Time</th>
-                        <th>Out Time</th>
-                        <th>Total Duration</th>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for vi in visitors %}
-                    <tr>
-                        
-                        <td>{{vi.entry_date.strftime('%d-%m-%Y')}}</td>
-                        <td>{{vi.visitor_name}}</td>
-                        <td>{{vi.visitor_contact}}</td>
-                        <td>{{vi.visitor_company}}</td>
-                        <td> {{vi.visited_employee.employee_name}} </td>
-                        <td>{{vi.visited_dept.department_name}}</td>
-                        <td> {{vi.visiting_purpose}}</td>
-                        <td>{{vi.entry_time}}</td>
-                        <td>{{vi.exit_time}}</td>
-                        <td>{{vi.total_duration}}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-                <tfoot>
-                    <tr>
-                        
-                        <th>Entry date</th>
-                        <th>Visitor Name</th>
-                        <th>Contact Number</th>
-                        <th>Visitor Company</th>
-                        <th>Visiting Department</th>
-                        <th>Visiting Person</th>
-                        <th>Visiting Purpose</th>
-                        <th>In Time</th>
-                        <th>Out Time</th>
-                        <th>Total Duration</th>
-                    </tr>
-                </tfoot>
-            </table>
-
-        </div>
-    </div>
-
+</div>
 
 </div>
 </div>
 
 
+{% endblock %}
+
+{% block script %}
+<script>
+    $('.modal').on('shown.bs.modal', function() {
+  $(this).find('[autofocus]').focus();
+});
+</script>
 {% endblock %}
