--- a/flaskapp/templates/test-dashboard-report_mill.html
+++ b/flaskapp/templates/test-dashboard-report_mill.html
@@ -1,7 +1,7 @@
 {% extends 'test-dashboard.html' %}
 
 {% block pagetitle %}
-    Vehicles Report
+    Mill Vehicles Report
 {% endblock %}
 
 {% block title %}Report {% endblock %}
